--- a/src/app.scss
+++ b/src/app.scss
@@ -4,4 +4,10 @@
   grid-template-columns: 50% 50%;
   height: 100vh;
   width: 100%;
+
+  &__forms {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
