--- a/src/components/image/image.scss
+++ b/src/components/image/image.scss
@@ -47,5 +47,9 @@
     border-radius: 6px;
     padding: 10px 35px;
     font-size: 17px;
+    text-decoration: none;
+    display: block;
+    max-width: 140px;
+    text-align: center;
   }
 }
