--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -1,12 +1,9 @@
 .login {
-  max-width: 320px;
+  min-width: 360px;
   width: 90%;
 
   &__content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    text-align: center;
   }
 
   &__logo {
