--- a/src/components/register/register.scss
+++ b/src/components/register/register.scss
@@ -1,17 +1,9 @@
 .register {
-  max-width: 320px;
+  min-width: 360px;
   width: 90%;
 
   &__content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  &__logo {
-    width: 40px;
-    margin-bottom: 20px;
+    text-align: center;
   }
 
   &__title {
@@ -34,11 +26,12 @@
   &__icon {
     position: absolute;
     left: 10px;
-    top: 8px;
+    top: 9px;
     fill: #51504f;
   }
 
-  &__input {
+  &__input,
+  &__select {
     color: #51504f;
     border: 1px solid #51504f;
     border-radius: 6px;
